<resources>
    <string name="app_name">Dueling Buffalo</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="word">Collect the word</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct</string>
    <string name="not_correct">Not Correct</string>
    <string name="music">Music</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>