<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DuelingBoard"
    android:background="@drawable/bg1">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:src="@drawable/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin"
        app:cornerRadius="@dimen/margin"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:layout_width="wrap_content"
        android:text="@string/play"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        app:cornerRadius="@dimen/margin"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:layout_width="wrap_content"
        android:text="@string/settings"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit"
        android:layout_below="@+id/settings"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        app:cornerRadius="@dimen/margin"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:layout_width="wrap_content"
        android:text="@string/exit"
        android:layout_height="wrap_content"/>

</RelativeLayout>