<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GameDuelBoard"
    android:background="@drawable/bg1">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:backgroundTint="@color/yellow"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collect"
        android:text="@string/word"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:layout_below="@+id/back"
        android:textColor="@color/white"/>


    <LinearLayout
        android:id="@+id/imgs"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img2"/>
        <ImageView
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img3"/>
        <ImageView
            android:adjustViewBounds="true"
            android:layout_weight="1"
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img4"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fields"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <include android:id="@+id/custom1"
            android:layout_weight="1"
            layout="@layout/holder_custom"
            android:layout_width="wrap_content"
            android:layout_height="150dp" />
        <include android:id="@+id/custom2"
            android:layout_weight="1"
            layout="@layout/holder_custom"
            android:layout_width="wrap_content"
            android:layout_height="150dp" />
        <include android:id="@+id/custom3"
            android:layout_weight="1"
            layout="@layout/holder_custom"
            android:layout_width="wrap_content"
            android:layout_height="150dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/btns"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img2"/>
        <ImageView
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img3"/>
        <ImageView
            android:adjustViewBounds="true"
            android:layout_weight="1"
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img4"/>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:backgroundTint="@color/yellow"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/margin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>